# openvino_build_deploy

./: .gitattributes  .gitignore  CI_README.md  README.md  check_openvino_env.py  check_project_env.py  ci_readme.md
.github/reusable-steps/: validate_exe.py
.github/setup-os/: action.yml
.github/workflows/: build_exe_validation.yml  hf-download-job.yml  python-app.yml  reusable-sanity-python.yml  sanity-check-agentic-multimodal.yml  sanity-check-apps.yml  sanity-check-demos.yml  sanity-check-dockerfiles.yml  sanity-check-kits.yml  sanity-check-notebooks.yml  sanity-check.yml  setup-os.yml  stale.yml
ai_ref_kits/: README.md
ai_ref_kits/Visual_Gen_Studio/: convert_and_optimize_texttoimage.py  main.py  requirements.txt
ai_ref_kits/adventure_gaming_to_life/: README.md  WIP_download_and_optimize_depth_anything_v2_model.py  audio_server.py  download_and_optimize_llava_model.py  download_and_prepare_models.py  gradio_ui.py  index.html  llm_config.py  locations.json  python3.11.9_requirements.txt  python3.12_requirements.txt  python3.12_requirements_model_installation.txt  stable_diffusion_engine.py  superres.py  utils.py
ai_ref_kits/agentic_llm_rag/: README.md  app.py  convert_and_optimize_asr.py  convert_and_optimize_llm.py  create_tools.py  main.py  paint_concierge_personality.txt  paint_concierge_personality.yaml  personality.txt  personality.yaml  pyproject.toml  requirements.txt  store_employee_personality.txt  store_employee_personality.yaml  system_prompt.py  tools.py
ai_ref_kits/agentic_multimodal_travel_planer/: README.md  download_and_run_models_Windows.bat  download_and_run_models_linux.sh  requirements.txt  run_all_linux.sh  run_all_windows.bat  start_agents.py  start_mcp_servers.py  start_ui.py
ai_ref_kits/agentic_multimodal_travelplaner/: README.md  requirements.txt  start_agents.py  start_mcp_servers.py  start_ui.py
ai_ref_kits/ai_adventure_experience/: README.md  ai_adventure_experience.py  index.html  requirements.txt
ai_ref_kits/custom_ai_assistant/: README.md  app.py  convert_and_optimize_asr.py  convert_and_optimize_chat.py  main.py  pyproject.toml  requirements.txt
ai_ref_kits/custom_ai_assistant/ci/: test.py
ai_ref_kits/defect_detection_anomalib/: 501a_training_a_model_with_cubes_from_a_robotic_arm.ipynb  501b_inference_with_a_robotic_arm.ipynb  README.md  pyproject.toml  requirements.txt
ai_ref_kits/explainable_ai/: README.md  explainable_ai.ipynb  pyproject.toml  requirements.txt  utils.py
ai_ref_kits/meter_reader/: README.md  main.py  pyproject.toml  requirements.txt  utils.py
ai_ref_kits/meter_reader/analog/: base.py  paddle.py  yolo.py
ai_ref_kits/meter_reader/model/: download_pdmodel.sh
ai_ref_kits/multimodal_ai_visual_generator/: README.md  WIP_download_and_optimize_depth_anything_v2_model.py  app.py  audio_server.py  convert_and_optimize_llm.py  convert_and_optimize_text2image.py  download_and_prepare_models.py  download_models.bat  gradio_ui.py  index.html  install.bat  locations.json  main.py  pdf_helper.py  pyproject.toml  python3.11.9_requirements.txt  python3.12_requirements.txt  python3.12_requirements_model_installation.txt  requirements.txt  run_backend.bat  run_frontend.bat  stable_diffusion_engine.py  streamlit_app.py  streamlit_helper.py  superres.py  vad_whisper_workers.py
ai_ref_kits/multimodal_ai_visual_generator/ci/: test.py
ai_ref_kits/multimodal_ai_visual_generator/config/: branding.yaml  illustration.yaml
ai_ref_kits/multimodal_ai_visual_generator/models/: model_requirements.txt
ai_ref_kits/multimodal_ai_visual_generator/pipelines/: nano_llava_utils.py
ai_ref_kits/multimodal_ai_visual_generator/scripts/: download_models.bat  install.bat  run_backend.bat  run_frontend.bat
apps/: README.md
demos/: CONTRIBUTING.md  Dockerfile  README.md  run_container.sh
demos/paint_your_dreams_demo/: Dockerfile  README.md  last_known_config.txt  main.py  pyproject.toml  requirements.txt
demos/paint_your_dreams_demo/setup/: install.bat  install.sh  run.bat  run.sh
demos/paint_your_dreams_demo/test_venv/: pyvenv.cfg
demos/people_counter_demo/: .gitattributes  README.md  install_people_counter.bat  main.py  pyproject.toml  requirements.txt  run_people_counter.bat
demos/people_counter_demo/Installer/: install.bat  run.bat  run.sh
demos/people_counter_demo/setup/: install.bat  install.sh  run.bat  run.sh
demos/spot_the_object_demo/: README.md  main.py  pyproject.toml  requirements.txt
demos/spot_the_object_demo/setup/: install.bat  install.sh  run.bat  run.sh
demos/strike_a_pose_demo/: README.md  main.py  pose_classifier.py  pyproject.toml  requirements.txt
demos/strike_a_pose_demo/setup/: install.bat  install.sh  run.bat  run.sh
demos/the_narrator_demo/: README.md  llava.ipynb  main.py  main_video.py  pyproject.toml  requirements.txt  test_openvino_optimum.py  video_captioning.py  video_captioning_OLD.py
demos/the_narrator_demo/setup/: install.bat  install.sh  run.bat  run.sh
demos/theme_demo/: README.md  decoder.py  main.py  pyproject.toml  requirements.txt  themes.py
demos/theme_demo/setup/: install.bat  install.sh  run.bat  run.sh
docker/: Dockerfile.demo
notebooks/onnxruntime_yolov8/: README.md  YOLOv8 Object Detection with ONNX and OpenVINO Execution Provider.ipynb  pyproject.toml  requirements.txt
scripts/: check_openvino_env.py
workshops/CVPR2025/: .gitattributes  README.md  convert_whisper_model.py  main.py  pip_packages_windows.txt  pyproject.toml  requirements.txt
workshops/CVPR2025/src/: gradio_helper.py  main_realtime_capture_server.py  main_shopping_cart_server.py  main_test.py
workshops/CVPR2025/src/mcp_clients/: realtime_capture_client.py  working_video_search_client.py
workshops/CVPR2025/src/mcp_clients/utils/: load_servers.py  logger.py  utils.py
workshops/CVPR2025/src/mcp_servers/bridgetower_search/utils/: notebook_utils.py  utils.py
workshops/CVPR2025/src/mcp_servers/realtime_capture/: README.md  realtime_capture_server.py
workshops/CVPR2025/src/mcp_servers/shopping_cart/: utils.py
workshops/CVPR2025/src/utils/: custom_embeddings.py  logger.py
(+596 files in other folders)
