[project]
name = "defect_detection_anomalib"
version = "1.0.0"
readme = "README.md"
license = { file = "../../LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "jupyterlab==4.2.5",
    "ipywidgets==8.1.5",
    "anomalib[core,openvino]==1.2.0",
    "scikit-learn==1.6.1",
    "python-dotenv==1.0.1",
    "matplotlib==3.9.0",
    "numpy==1.26.4",
]

[tool.uv]
extra-index-url = "https://download.pytorch.org/whl/cpu"