[project]
name = "explainable_ai"
version = "1.0.0"
readme = "README.md"
license = { file = "../../LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "openvino==2024.6.0",
    "nncf==2.14.1",
    "ultralytics==8.3.38",
    "numpy==1.26.4",
    "pillow==11.0.0",
    "opencv-python==4.10.0.84",
    "onnx==1.17.0",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "supervision==0.25.1",
    "jupyterlab==4.2.5",
    "tqdm==4.66.6",
    "pycocotools==2.0.8",
    "cython==3.0.11",
    "datumaro[default]==1.9.1",
    "iprogress==0.4",
    "ipywidgets==8.1.5",
    "lapx==0.5.11",
]

[tool.uv]
extra-index-url = "https://download.pytorch.org/whl/cpu"