[project]
name = "meter_reader"
version = "1.0.0"
readme = "README.md"
license = { file = "../../LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "openvino==2024.6.0",
    "numpy==1.26.4",
    "opencv-python==4.9.0.80",
    "requests==2.32.4",
    "tqdm==4.67.1",
]

[tool.uv]
extra-index-url = "https://download.pytorch.org/whl/cpu"