[project]
name = "multimodal_ai_visual_generator"
version = "1.0.0"
readme = "README.md"
license = { file = "../../LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "openvino==2025.1.0",
    "openvino-genai==2025.1.0",
    "openvino-tokenizers==2025.1.0",
    "optimum==1.24.0",
    "optimum-intel==1.22.0",
    "nncf==2.16.0",
    "transformers==4.48.3",
    "diffusers==0.33.1",
    "huggingface-hub==0.30.2",
    "sentencepiece==0.2.0",
    "protobuf==6.31.1",
    "peft==0.15.2",
    "torch==2.7.1",
    "scipy==1.13.1",
    "streamlit==1.45.0",
    "pillow==11.3.0",
    "fpdf==1.7.2",
    "fastapi==0.115.12",
    "uvicorn==0.34.2",
    "click>=8.0",
    "opencv-python==4.11.0.86",
    "numpy==1.26.4",
]

[tool.uv]
extra-index-url = "https://download.pytorch.org/whl/cpu"