[project]
name = "paint_your_dreams_demo"
version = "1.0.0"
readme = "README.md"
license = { file = "../../LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "openvino==2025.2",
    "openvino-genai==2025.2",
    "nncf==2.17.0",
    "optimum-intel==1.23.1",
    "optimum==1.25.3",
    "onnx==1.18.0",
    "huggingface-hub==0.33.1",
    "diffusers==0.34.0",
    "transformers==4.51.3",
    "torch==2.7.1",
    "accelerate==1.2.1",
    "pillow==11.1.0",
    "opencv-python==4.10.0.84",
    "numpy==2.2.6",
    "gradio==5.35.0",
    "tqdm==4.67.1",
]

[tool.setuptools]
py-modules = ["main"]

[tool.uv]
extra-index-url = "https://download.pytorch.org/whl/cpu"