[project]
name = "people_counter_demo"
version = "1.0.0"
readme = "README.md"
license = { file = "../../LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "openvino==2025.2",
    "nncf==2.17.0",
    "ultralytics==8.3.161",
    "numpy==2.2.6",
    "pillow==11.3.0",
    "opencv-python==4.10.0.84",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "supervision==0.22.0",
    "tqdm==4.66.3",
    "cython==0.29.35",
    "deep-sort-realtime==1.3.2",
]

[tool.setuptools]
py-modules = ["main"]

[tool.uv]
extra-index-url = "https://download.pytorch.org/whl/cpu"