[project]
name = "spot_the_object_demo"
version = "1.0.0"
readme = "README.md"
license = { file = "../../LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "openvino==2025.2",
    "onnx==1.18.0",
    "ultralytics==8.3.161",
    "supervision==0.25.1",
    "torch==2.7.1",
    "opencv-python==4.10.0.84",
    "numpy==2.2.6",
]

[tool.setuptools]
py-modules = ["main"]

[tool.uv]
extra-index-url = "https://download.pytorch.org/whl/cpu"