[project]
name = "strike_a_pose_demo"
version = "1.0.0"
readme = "README.md"
license = { file = "../../LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "openvino==2025.2",
    "nncf==2.17.0",
    "ultralytics==8.3.161",
    "opencv-python==4.10.0.84",
    "numpy==2.2.6",
    "torch==2.7.1",
]

[tool.setuptools]
py-modules = ["main"]

[tool.uv]
extra-index-url = "https://download.pytorch.org/whl/cpu"