[project]
name = "the_narrator_demo"
version = "1.0.0"
readme = "README.md"
license = { file = "../../LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "openvino==2025.2.0",
    "numpy==2.2.6",
    "opencv-python==4.11.0.86",
    "pillow==11.3.0",
    "transformers==4.52.4",
    "torch==2.7.1",
    "torchvision==0.22.1",
]

[tool.setuptools]
py-modules = ["main"]

[tool.uv]
extra-index-url = "https://download.pytorch.org/whl/cpu"