[project]
name = "theme_demo"
version = "1.0.0"
readme = "README.md"
license = { file = "../../LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "openvino==2025.2",
    "opencv-python==4.10.0.84",
    "numpy==2.2.6",
    "tqdm==4.67.1",
    "requests==2.32.4",
]

[tool.setuptools]
py-modules = ["main"]

[tool.uv]
extra-index-url = "https://download.pytorch.org/whl/cpu"