[project]
name = "onnxruntime_yolov8"
version = "1.0.0"
readme = "README.md"
license = { file = "../../LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "jupyterlab==4.4.4",
    "openvino==2025.2.0",
    "ultralytics==8.3.141",
    "onnxruntime-openvino==1.22.0",
    "onnx==1.18.0",
    "torch==2.7.1",
    "numpy==2.2.6",
    "opencv-python==4.11.0.86",
    "setuptools==78.1.1",
]

[tool.uv]
extra-index-url = "https://download.pytorch.org/whl/cpu"